--- a/CPH.ipynb
+++ b/CPH.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "CPH.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPS+cX3lBKnnYVUTzngqa2a",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPxw/WNnrq8n6eTHPt137vx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +34,11 @@
         "id": "MiTnR5T4YzgG"
       },
       "source": [
-        ""
+        "#Some basic istructions:\n",
+        "# 1.All code must be FULLY DOCUMENTED\n",
+        "# 2.Everything should be inside a class(classes) or functions if you don't know OOP\n",
+        "# 3.Please avoid using values (numbers/string/....) use instead variables\n",
+        "# 4.Use default values for your function arguments whenever possible"
       ],
       "execution_count": null,
       "outputs": []
