--- a/CPH001.ipynb
+++ b/CPH001.ipynb
@@ -73,7 +73,7 @@
         "#...\n",
         "#..."
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "    self.df = data # Save filtered dataset \n",
         "    return self.df # Print dataset\n",
         "  # Clean data\n",
-        "  def cleaning (self, data): \n",
+        "  def cleaning (self, data,longformat=True,individual=\"id\", stop=\"time\", stopname=\"start\"): \n",
         "    col1 = data.loc[:,self.cols_standardize]# separate the variables to be standartized\n",
         "    col2 = data.drop(columns=self.cols_standardize)# separate the variables not to be standartized\n",
         "    standard = preprocessing.scale(col1)# standardization of variables\n",
@@ -120,7 +120,11 @@
         "    df3=pd.concat([col2,df2], axis=1)# merge 2 df\n",
         "    data2 = df3.drop_duplicates() #drop double row entries\n",
         "    self.df = data2 # Save filtered dataset\n",
-        "    return self.df # Print dataset\n",
+        "    if longformat:# Bring data into long format (necessary for using the lifeline package's Cox’s time varying proportional hazard model) \n",
+        "        data2[stopname] = data2.groupby(individual)[stop].shift(1)\n",
+        "        data2[stopname] = data2[stopname].fillna(0)\n",
+        "        self.df = data2 # Save filtered dataset\n",
+        "        return self.df # Print dataset\n",
         "### Saving and load objects as binary mode\n",
         "  def save (self, dataname, dataframe , cwd = os.getcwd()):# Saving and load objects as binary mode\n",
         "    with open( cwd + '/' + dataname + '.pkl','wb') as path_name: # save df, 'wb' specifies 'write'\n",
@@ -129,7 +133,6 @@
         "    with open( cwd + '/' + dataname + '.pkl' ,'rb') as path_name:# load df, 'rb' specifies 'read'\n",
         "      dataframe = pickle.load(path_name)\n",
         "      return dataframe # Print dataset\n",
-        "### Bring data into long format (necessary for using the lifeline package's Cox’s time varying proportional hazard model)               HELP!!!!!\n",
         "  def longformat(self, dataframe, individual=\"id\", stop=\"time\", stopname=\"start\"):\n",
         "    dataframe[stopname] = dataframe.groupby(individual)[stop].shift(1)\n",
         "    dataframe[stopname] = dataframe[stopname].fillna(0)\n",
@@ -141,7 +144,7 @@
         "    self.X_train, self.X_val, self.y_train, self.y_val = sklearn.model_selection.train_test_split(self.X_train, self.y_train, test_size=perc_val,  shuffle=shuffle) # Split train data not randomly to train 80% and valid 10%\n",
         "    print(len(self.X_train), len(self.X_val), len(self.X_test)) # len - length "
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -162,7 +165,6 @@
         "# temp=Preparation()\n",
         "# newdf = temp.readdf()\n",
         "# temp.cleaning(newdf)\n",
-        "# temp.longformat(newdf)\n",
         "# temp.save('qwer', newdf)\n",
         "# www=temp.load('qwer')\n",
         "# temp.splitdata(newdf.loc[:,newdf.columns != \"status_time\"], yvar=newdf.status_time)\n",
